// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message NativeHelmInstanceSyncPerpetualTaskParams {
  string account_id = 1;
  repeated NativeHelmDeploymentRelease deployment_release_list = 2;
  string helm_version = 3;
}

message NativeHelmDeploymentRelease {
  bytes k8s_infra_delegate_config = 1;
  repeated string namespaces = 2;
  string release_name = 3;
  bytes helm_chart_info = 4;
  map<string, LabelSelectors> workload_label_selectors = 5;
}

message LabelSelectors {
  repeated string label_selectors = 1;
}
